# esp32-multichannel-led-driver-1.10

./: .gitignore  README.md  sdkconfig.defaults
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: main.yml
backend/: server.js
components/ota/: CMakeLists.txt  ota.c
frontend/src/views/: Home.vue
frontend/src/views/components/: Main.vue  User.vue
main/: CMakeLists.txt  adc.c  auth.c  buttons.c  connect.c  fanspeed.c  light.c  main.c  monitor.c  mqtt.c  pidreg.c  pwm.c  rtc.c  server.c  settings.c  thingsboard.c  udp_multicast.c
main/include/: board.h  main.h  settings.h  webpage.h
